# myge

./: .gitmodules  CMakeLists.txt  README.md  readme.txt
source/: CMakeLists.txt  main.c
source/core/: core.c  core.h
source/core/ecs/: ecs.c  ecs.h
